--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel-item {
   height: 32rem;
-  background-color: #777;
 }
 .carousel-item > img {
   position: absolute;
@@ -54,6 +53,25 @@ body {
   left: 0;
   min-width: 100%;
   height: 32rem;
+}
+.carousel-indicators .active {
+  background-color: black;
+}
+.carousel-indicators li {
+  background-color: gray;
+}
+
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 55px;
+  color: black;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: black;
 }
 
 
